--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,9 +2,12 @@
     <h1>Home</h1>
 <p> <%= StartingContent %> </p>
 
-    <% Posts.forEach(function(post) { %>
+    <% posts.forEach(function(post) { %>
         <h1><%= post.title %></h1> 
-        <p><%= post.content %></p>
+        <p>
+            <%= post.content.substring(0, 100) + " ..."%>
+            <a href="/posts/<%= post.title %>">Read More</a>
+        </p>
         <% }); %>
 
 <%- include("partials/footer") -%>
